--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "framer-motion": "^11.9.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.2",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
